[tool.poetry]
name = "roko-query"
version = "0.4.0"
description = "A naptha module for answering questions about Roko"
authors = ["jayseaeff"]
readme = "README.md"
packages = [
    {include = "roko_query", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.7.0"
ollama = "^0.2.1"
PyYAML = "^6.0.1"
chromadb = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
