[tool.poetry]
name = "roko-summary"
version = "0.2"
description = "A naptha module for generating summaries of Roko community activity"
authors = ["cj-clifton"]
readme = "README.md"
packages = [
    {include = "roko_summary", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.7.0"
ollama = "^0.2.1"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
